--- a/src/pages/bloodresult/bloodresult.html
+++ b/src/pages/bloodresult/bloodresult.html
@@ -14,9 +14,10 @@
   <canvas #lineCanvas></canvas>
 
 
+  <ion-row justify-content-center>
 
   <button ion-button  (click)="btn_update_graph()">Load Blood Result Chart</button>
 
-
+  </ion-row>
 
 </ion-content>
