--- a/src/pages/sspedirating/sspedirating.html
+++ b/src/pages/sspedirating/sspedirating.html
@@ -14,9 +14,9 @@
   <canvas #lineCanvas></canvas>
 
 
-
+  <ion-row justify-content-center>
   <button ion-button  (click)="btn_update_graph()">Load Rating Chart</button>
-
+</ion-row>
 
 
 </ion-content>
