--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -30,6 +30,17 @@
         </ion-label>
       </ion-col>
 
+
+      <ion-col>
+        <ion-label>
+          <button ion-button clear (click)="showLibraryPage()">
+            <ion-icon name="clipboard" style="zoom:2.0;"></ion-icon>
+          </button>
+          <br>Library
+        </ion-label>
+      </ion-col>
+
+
     </ion-row>
   </ion-grid>
 
